# autodealer-ai-assistant

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sample_inventory.csv  start_local.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_mvp_schema_extensions.py  003_add_wamid_column.py  004_add_ml_item_id_index.py  006_multi_tenancy_dealership_columns.py  007_billing_subscription_columns.py  008_client_integration_columns.py  009_ml_sync_columns.py  010_llm_columns.py
examples/: curl_examples.sh
scripts/: backup.sh
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  base.py  mercadolibre.py  whatsapp_cloud.py
src/api/: auth.py  deps.py  (+1 more)
tests/: conftest.py  test_admin_dashboard.py  test_auth_session.py  test_billing.py  test_engine.py  test_followup_engine.py  test_followup_intent.py  test_followup_task.py  test_health.py  test_integrations_routes.py  test_intent_entities.py  test_inventory.py  test_llm_settings.py  test_ml_sync.py  test_ml_token_manager.py  test_multi_tenancy_routing.py  test_security_foundations.py  test_visit_confirmation.py  test_webhook.py  test_webhook_lemon.py
(+157 files in other folders)
